--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -395,6 +395,7 @@
         app:cardBackgroundColor="@color/orange_color"
         android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/storeClassificationTxt"
             android:layout_marginEnd="@dimen/_10sdp"
             android:layout_gravity="center"
             android:textColor="@color/white"
