--- a/app/src/main/res/layout/fragment_clients_details.xml
+++ b/app/src/main/res/layout/fragment_clients_details.xml
@@ -94,7 +94,7 @@
                 android:layout_height="wrap_content"
                 android:minHeight="@dimen/_150sdp"
                 style="@style/cardDialog"
-                android:layout_marginBottom="@dimen/_100sdp"
+                android:layout_marginBottom="@dimen/_30sdp"
                 >
 
                 <LinearLayout
@@ -314,6 +314,29 @@
 
 
             </com.google.android.material.card.MaterialCardView>
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/deleteClientsBtn"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="@dimen/_16sdp"
+                android:layout_marginEnd="@dimen/_16sdp"
+                android:layout_marginTop="@dimen/_24sdp"
+                android:layout_marginBottom="@dimen/_100sdp"
+                app:backgroundTint="@color/logout_red"
+                app:cornerRadius="7dp"
+                android:text="@string/delete"
+                android:textColor="@color/white"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:textSize="15sp"
+                android:textAllCaps="false"
+                android:textStyle="bold"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_50sdp"/>
+
 
 
 
