--- a/app/src/main/res/layout/fragment_current_special_wallet.xml
+++ b/app/src/main/res/layout/fragment_current_special_wallet.xml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".delegates.wallet.fragments.CurrentSpecialWalletFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:id="@+id/currentWalletRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="currentSpecialWallet" />
+        android:layout_marginTop="@dimen/_16sdp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
-</FrameLayout>
+    <LinearLayout
+        android:id="@+id/noCurrentWalletData"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+        <include layout="@layout/no_products" />
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
