delegate create order

--- a/app/src/main/res/layout/fragment_order_item_details.xml
+++ b/app/src/main/res/layout/fragment_order_item_details.xml
@@ -93,7 +93,7 @@
             android:layout_marginStart="@dimen/_24sdp"
             android:textColor="@color/black"
             android:layout_marginTop="@dimen/_5sdp"
-            android:text="سامسونغ غالاكسي إس"
+            android:text=""
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/itemQuantity"
             app:layout_constraintTop_toBottomOf="@+id/detailsName" />
@@ -114,7 +114,7 @@
             android:id="@+id/itemQuantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2"
+            android:text=""
             android:textColor="@color/text_black"
             android:textStyle="bold"
             android:textSize="15sp"
@@ -205,7 +205,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_4sdp"
                     android:textColor="@color/black_bold"
-                    android:text="الكترونيات"
+                    android:text=""
                     android:textSize="12sp"
                     app:layout_constraintStart_toEndOf="@+id/circleColored"
                     app:layout_constraintTop_toBottomOf="@+id/date" />
@@ -234,7 +234,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_4sdp"
                     android:textColor="@color/black_bold"
-                    android:text="متجر 1"
+                    android:text=" "
                     android:textSize="12sp"
                     />
             </LinearLayout>
@@ -264,7 +264,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black_bold"
-                    android:text="1"
+                    android:text=""
                     android:textSize="12sp"
                     />
             </LinearLayout>
@@ -401,7 +401,7 @@
                     android:layout_marginStart="@dimen/_16sdp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="الهاتف الذكي من الانتقال بين التطبيقات بسلاسة بفضل المعالج بتقنية سنابدراغون 855 اوكتاكور."
+                    android:text=""
                     android:textSize="12sp"
                     android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
@@ -493,13 +493,13 @@
                         android:id="@+id/itemAddress"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="الرياض ، عاصمة المملكة العربية السعودية " />
+                        android:text="" />
 
                     <TextView
                         android:id="@+id/itemMapName"
                         android:layout_width="0dp"
                         android:layout_height="26dp"
-                        android:text="احمد بن صالح الشامي"
+                        android:text=""
                         android:textSize="14sp"
                         android:textStyle="bold"
                         android:fontFamily="@font/ffshamelfamily_sansonebold"
@@ -514,7 +514,7 @@
                         android:id="@+id/itemMapPhone"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text=" +966 00000 0000"
+                        android:text=""
                         android:textSize="14sp"
                         android:textStyle="bold"
                         android:fontFamily="@font/ffshamelfamily_sansonebold"
@@ -530,7 +530,7 @@
                         android:id="@+id/itemMapEmail"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="trose@buzzbean.info"
+                        android:text=""
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_marginBottom="@dimen/_10sdp"
                         android:textSize="14sp"
@@ -597,7 +597,7 @@
                         android:id="@+id/feeCurrency"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="رس"
+                        android:text=""
                         android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:textColor="@color/login_gray"
@@ -608,7 +608,7 @@
                         android:id="@+id/feePrice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="1.200 "
+                        android:text=""
                         android:layout_marginEnd="@dimen/_4sdp"
                         android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -649,7 +649,7 @@
                         android:id="@+id/shippingCurrancy"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="رس"
+                        android:text=""
                         android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:textColor="@color/login_gray"
@@ -660,7 +660,7 @@
                         android:id="@+id/shippingPrice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="1000"
+                        android:text=""
                         android:layout_marginEnd="@dimen/_4sdp"
                         android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -703,7 +703,7 @@
                         android:id="@+id/totalPriceCurrancy"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="رس"
+                        android:text=""
                         android:textSize="12sp"
                         android:layout_marginEnd="@dimen/_14sdp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -715,7 +715,7 @@
                         android:id="@+id/totalPricePrice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="1000"
+                        android:text=""
                         android:layout_marginEnd="@dimen/_4sdp"
                         android:textSize="15sp"
                         app:layout_constraintBottom_toBottomOf="parent"
