--- a/app/src/main/res/layout/new_wallet_item.xml
+++ b/app/src/main/res/layout/new_wallet_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_130sdp"
+    android:layout_height="@dimen/_150sdp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="5dp"
@@ -42,7 +42,7 @@
                 app:srcCompat="@drawable/ic_wallet_img" />
 
             <TextView
-                android:id="@+id/currentWalletName"
+                android:id="@+id/newWalletName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_8sdp"
@@ -57,7 +57,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/currentWalletDesc"
+                android:id="@+id/newWalletDesc"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_8sdp"
@@ -70,12 +70,12 @@
                 app:layout_constraintEnd_toStartOf="@+id/quantityLayout"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/currentWalletImg"
-                app:layout_constraintTop_toBottomOf="@+id/currentWalletName" />
+                app:layout_constraintTop_toBottomOf="@+id/newWalletName" />
 
 
             <LinearLayout
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/currentWalletDesc"
+                app:layout_constraintStart_toEndOf="@+id/newWalletDesc"
                 app:layout_constraintTop_toBottomOf="@+id/quantityLayout"
                 android:id="@+id/priceLayout"
                 android:layout_width="wrap_content"
@@ -85,7 +85,7 @@
                 >
 
                 <TextView
-                    android:id="@+id/price"
+                    android:id="@+id/newOrderPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="30"
@@ -94,17 +94,17 @@
                     android:layout_marginEnd="@dimen/_3sdp"
                     android:textColor="@color/black_bold"
                     android:fontFamily="@font/ffshamelfamily_sansonebold"
-                 />
+                    />
 
                 <TextView
-                    android:id="@+id/currancy"
+                    android:id="@+id/newOrderCurrency"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="رس"
                     android:textSize="12sp"
                     android:layout_marginEnd="@dimen/_16sdp"
                     android:textColor="@color/text_grey"
-                   />
+                    />
 
 
             </LinearLayout>
@@ -112,7 +112,7 @@
             <LinearLayout
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/currentWalletName"
+                app:layout_constraintStart_toEndOf="@+id/newWalletName"
                 android:id="@+id/quantityLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -121,7 +121,7 @@
                 >
 
                 <TextView
-                    android:id="@+id/quantity"
+                    android:id="@+id/newOrderQuantity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="2"
@@ -130,7 +130,7 @@
                     android:textStyle="bold"
                     android:textSize="16sp"
                     android:layout_marginEnd="@dimen/_3sdp"
-                   />
+                    />
 
                 <TextView
                     android:id="@+id/piece_text"
@@ -155,7 +155,7 @@
 
         <TextView
             android:layout_marginTop="@dimen/_5sdp"
-            android:id="@+id/walletCategoryTxt"
+            android:id="@+id/newwalletCategoryTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/imgContainer"
@@ -169,12 +169,12 @@
 
         <TextView
             android:layout_marginTop="@dimen/_5sdp"
-            android:id="@+id/slash"
+            android:id="@+id/newSlash"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_2sdp"
             android:layout_marginEnd="@dimen/_2sdp"
-            app:layout_constraintStart_toEndOf="@+id/walletCategoryTxt"
+            app:layout_constraintStart_toEndOf="@+id/newwalletCategoryTxt"
             app:layout_constraintTop_toBottomOf="@+id/imgContainer"
             android:text="/"
             android:textSize="@dimen/_10ssp"
@@ -184,62 +184,42 @@
 
         <TextView
             android:layout_marginTop="@dimen/_5sdp"
-            android:id="@+id/walletStoreTxt"
+            android:id="@+id/newwalletStoreTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_2sdp"
             android:layout_marginEnd="@dimen/_2sdp"
-            app:layout_constraintStart_toEndOf="@+id/slash"
+            app:layout_constraintStart_toEndOf="@+id/newSlash"
             app:layout_constraintTop_toBottomOf="@+id/imgContainer"
             android:text="مخزن1"
             android:textSize="@dimen/_10ssp"
             android:textColor="@color/black"
 
             />
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/statusCurrentWallet"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/_25sdp"
+
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/acceptOrderBtn"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_5sdp"
             android:layout_marginBottom="@dimen/_10sdp"
+            app:backgroundTint="@color/green"
+            app:cornerRadius="7dp"
+            android:text="@string/accept"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:textSize="@dimen/_10ssp"
+            android:textAllCaps="false"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/_40sdp"
             android:minWidth="@dimen/_80sdp"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="@dimen/_5sdp"
-            app:cardElevation="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/walletCategoryTxt"
-            app:layout_constraintVertical_bias="0.428"
-            app:strokeColor="@color/greyText"
-            app:strokeWidth="1dp">
+            app:layout_constraintTop_toBottomOf="@+id/newwalletCategoryTxt"
+            app:layout_constraintVertical_bias="0.428"/>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:minWidth="@dimen/_80sdp"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/statusCurrentWalletTxt"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:text="تم التوصيل"
-                    android:textAlignment="center"
-                    android:textColor="@color/greyText"
-                    android:textSize="@dimen/_10ssp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </com.google.android.material.card.MaterialCardView>
 
         <ImageView
             android:id="@+id/arrowImg"
