--- a/app/src/main/res/layout/activity_delegates_home.xml
+++ b/app/src/main/res/layout/activity_delegates_home.xml
@@ -198,6 +198,55 @@
 
                 <!-- Column 2 -->
                 <com.google.android.material.card.MaterialCardView
+                    android:layout_width="0dp"
+                    android:id="@+id/makeOrderDelegateCard"
+                    android:layout_height="133dp"
+                    android:layout_columnWeight="1"
+                    android:layout_rowWeight="1"
+                    app:cardCornerRadius="5dp"
+                    android:layout_marginEnd="@dimen/_7sdp"
+                    >
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center_vertical|center"
+                        android:layout_marginEnd="@dimen/_10sdp"
+                        android:layout_marginStart="@dimen/_10sdp"
+                        >
+
+                        <ImageView
+                            android:id="@+id/makeOrderDelegateImg"
+                            android:layout_gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/ic_order_icon"
+
+                            />
+
+                        <TextView
+                            android:id="@+id/makeOrderDelegateText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAlignment="center"
+                            android:gravity="center"
+                            android:fontFamily="@font/ffshamelfamily_sansonebold"
+                            android:textStyle="bold"
+                            android:textSize="14sp"
+                            android:textColor="@color/textColor"
+                            android:text="@string/make_special_order"
+                            />
+
+
+
+
+                    </LinearLayout>
+
+                </com.google.android.material.card.MaterialCardView>
+
+                <com.google.android.material.card.MaterialCardView
+                    android:visibility="gone"
                     android:id="@+id/delegateOrdersCard"
                     android:layout_width="0dp"
                     android:layout_height="133dp"
@@ -301,54 +350,6 @@
                 </com.google.android.material.card.MaterialCardView>
 
                 <!-- Column 2 -->
-                <com.google.android.material.card.MaterialCardView
-                    android:layout_width="0dp"
-                    android:id="@+id/makeOrderDelegateCard"
-                    android:layout_height="133dp"
-                    android:layout_columnWeight="1"
-                    android:layout_rowWeight="1"
-                    app:cardCornerRadius="5dp"
-                    android:layout_marginTop="19dp"
-                    android:layout_marginStart="@dimen/_7sdp"
-                    >
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:gravity="center_vertical|center"
-                        android:layout_marginEnd="@dimen/_10sdp"
-                        android:layout_marginStart="@dimen/_10sdp"
-                        >
-
-                        <ImageView
-                            android:id="@+id/makeOrderDelegateImg"
-                            android:layout_gravity="center"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/ic_order_icon"
-
-                            />
-
-                        <TextView
-                            android:id="@+id/makeOrderDelegateText"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAlignment="center"
-                            android:gravity="center"
-                            android:fontFamily="@font/ffshamelfamily_sansonebold"
-                            android:textStyle="bold"
-                            android:textSize="14sp"
-                            android:textColor="@color/textColor"
-                            android:text="@string/make_special_order"
-                            />
-
-
-
-
-                    </LinearLayout>
-
-                </com.google.android.material.card.MaterialCardView>
 
 
                 <!-- Row 3 -->
